# wanax

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  wanax.c  wanax.py
examples/: wanax.c
scripts/: create_mask.py  downscale_zarr.py  gen_optimized_datasets.py  gen_outlines.py  rgb_viewer.py
src/: feature_detection.py  frequency.py  morphological.py  process.py  viewer.py  wanax.c
src/preprocessing/: denoising.py  equalization.py  glcae.py  normalization.py  resizing.py  sharpening.py
src/test/: test.c
